--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.14.4",
     "@strapi/plugin-users-permissions": "4.14.4",
+    "@strapi/provider-email-sendgrid": "^4.14.4",
     "@strapi/strapi": "4.14.4",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.3"
