--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.14.4",
     "@strapi/strapi": "4.14.5",
     "better-sqlite3": "8.6.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sendgrid": "^5.2.3"
   },
   "author": {
     "name": "A Strapi developer"
