--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+MOON_STRAPI_KEY=
+
+DATABASE_CLIENT=postgres
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
