--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/strapi": "4.14.5",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.3",
+    "pg-connection-string": "^2.6.2",
     "sendgrid": "^5.2.3"
   },
   "author": {
