--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     autoDeploy: false
     envVars:
       - key: NODE_VERSION
-        value: ~16.13.0
+        value: ^16.14.0
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
