--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,10 @@ services:
         generateValue: true
       - key: ADMIN_JWT_SECRET
         generateValue: true
+      - key: API_TOKEN_SALT
+        generateValue: true
+      - key: TRANSFER_TOKEN_SALT
+        generateValue: true
       - key: APP_KEYS
         generateValue: true
 
