--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
-MOON_STRAPI_KEY=
+MOON_STRAPI_SENDGRID_KEY=
 
 DATABASE_CLIENT=postgres
 DATABASE_NAME=
