--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2",
-    "sendgrid": "^5.2.3"
+    "sendgrid": "^5.2.3",
+    "strapi-google-auth": "^0.2.1"
   },
   "author": {
     "name": "A Strapi developer"
